Demo Master Deluxe

--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -193,7 +193,7 @@
                         <div class="header-links">
                             <ul>
                                 <li><i class="far fa-envelope"></i><a
-                                        href="mailto:info@haliyikatma.com">info@Anatolian Su Ürünleri.com</a></li>
+                                        href="mailto:info@haliyikatma.com">info@Anatolia Su Ürünleri.com</a></li>
                                 <li class="d-lg-inline d-none"><i class="far fa-clock"></i>Pazartesi - Cumartesi 8:00 -
                                     21:00</li>
                             </ul>
@@ -220,7 +220,7 @@
                             <div class="col-auto">
                                 <div class="header-logo">
                                     <a href="index.html">
-                                        <img src="assets/img/logo-dark.png" alt="logo">
+                                        <img src="assets/img/logo-dark.png" alt="logo" style="width: 140px;">
                                     </a>
                                 </div>
                             </div>
@@ -389,7 +389,7 @@
         <div id="videoPopup" class="video-popup">
             <div class="video-popup-content">
                 <span class="video-close">&times;</span>
-                <video id="localVideo" controls autoplay>
+                <video id="localVideo" controls autoplay muted>
                     <source src="assets/img/balikvideo.mp4" type="video/mp4">
                     Tarayıcınız video etiketini desteklemiyor.
                 </video>
@@ -432,7 +432,7 @@ Bugün geldiğimiz noktada, hem yerli hem de uluslararası pazarlarda güvenilir
                             <div class="vs-widget-about">
                                 <div class="footer-logo">
                                     <a href="index.html"><img src="assets/img/logo-white.png" alt="logo"
-                                            style="width: 250px;"></a>
+                                            style="width: 150px;"></a>
                                 </div>
 
                                 <div class="social-style1">
@@ -479,7 +479,7 @@ Bugün geldiğimiz noktada, hem yerli hem de uluslararası pazarlarda güvenilir
                 <div class="row justify-content-xl-between justify-content-center align-items-center">
                     <div class="col-auto">
                         <p class="copyright-text"><i class="fal fa-copyright"></i> Copyright 2025 - <a
-                                href="index.html">Anatolian Su Ürünleri.com</a> Tüm hakları saklıdır.</p>
+                                href="index.html">Anatolia Su Ürünleri.com</a> Tüm hakları saklıdır.</p>
                     </div>
                     <div class="col-auto">
                         <div class="copyright-img">
