--- a/iletisim.html
+++ b/iletisim.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>İletişim - Anatolia Su Ürünleri</title>
-    <meta name="author" content="Anatolian Su Ürünleri.com">
+    <meta name="author" content="Anatolia Su Ürünleri.com">
     <meta name="description"
         content="Anatolia su ürünleri olarak dünya çapında hizmet sunuyoruz.">
     <meta name="keywords"
@@ -120,7 +120,7 @@
                         <div class="header-links">
                             <ul>
                                 <li><i class="far fa-envelope"></i><a
-                                        href="mailto:info@haliyikatma.com">info@Anatolian Su Ürünleri.com</a></li>
+                                        href="mailto:info@haliyikatma.com">info@Anatolia Su Ürünleri.com</a></li>
                                 <li class="d-lg-inline d-none"><i class="far fa-clock"></i>Pazartesi - Cumartesi 8:00 -
                                     21:00</li>
                             </ul>
@@ -147,7 +147,7 @@
                             <div class="col-auto">
                                 <div class="header-logo">
                                     <a href="index.html">
-                                        <img src="assets/img/logo-dark.png" alt="logo">
+                                        <img src="assets/img/logo-dark.png" alt="logo" style="width: 140px;">
                                     </a>
                                 </div>
                             </div>
@@ -258,7 +258,7 @@
                                 </span>
                                 <div class="contact-content">
                                     <h6 class="contact-title">E-mail :</h6>
-                                    <p class="contact-text">info@Anatolian Su Ürünleri.com</p>
+                                    <p class="contact-text">info@Anatolia Su Ürünleri.com</p>
                                 </div>
                             </div>
                         </div>
@@ -331,7 +331,7 @@
                             <div class="vs-widget-about">
                                 <div class="footer-logo">
                                     <a href="index.html"><img src="assets/img/logo-white.png" alt="logo"
-                                            style="width: 250px;"></a>
+                                            style="width: 150px;"></a>
                                 </div>
 
                                 <div class="social-style1">
@@ -378,7 +378,7 @@
                 <div class="row justify-content-xl-between justify-content-center align-items-center">
                     <div class="col-auto">
                         <p class="copyright-text"><i class="fal fa-copyright"></i> Copyright 2025 - <a
-                                href="index.html">Anatolian Su Ürünleri.com</a> Tüm hakları saklıdır.</p>
+                                href="index.html">Anatolia Su Ürünleri.com</a> Tüm hakları saklıdır.</p>
                     </div>
                     <div class="col-auto">
                         <div class="copyright-img">
