--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -193,7 +193,7 @@
                         <div class="header-links">
                             <ul>
                                 <li><i class="far fa-envelope"></i><a
-                                        href="mailto:info@haliyikatma.com">info@Anatolia Su Ürünleri.com</a></li>
+                                        href="mailto:info@haliyikatma.com">info@anatolia.com</a></li>
                                 <li class="d-lg-inline d-none"><i class="far fa-clock"></i>Pazartesi - Cumartesi 8:00 -
                                     21:00</li>
                             </ul>
@@ -479,7 +479,7 @@ Bugün geldiğimiz noktada, hem yerli hem de uluslararası pazarlarda güvenilir
                 <div class="row justify-content-xl-between justify-content-center align-items-center">
                     <div class="col-auto">
                         <p class="copyright-text"><i class="fal fa-copyright"></i> Copyright 2025 - <a
-                                href="index.html">Anatolia Su Ürünleri.com</a> Tüm hakları saklıdır.</p>
+                                href="index.html">anatolia.com</a> Tüm hakları saklıdır.</p>
                     </div>
                     <div class="col-auto">
                         <div class="copyright-img">
