--- a/iletisim.html
+++ b/iletisim.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>İletişim - Anatolia Su Ürünleri</title>
-    <meta name="author" content="Anatolia Su Ürünleri.com">
+    <meta name="author" content="anatolia.com">
     <meta name="description"
         content="Anatolia su ürünleri olarak dünya çapında hizmet sunuyoruz.">
     <meta name="keywords"
@@ -80,7 +80,7 @@
         <div class="vs-menu-area text-center">
             <button class="vs-menu-toggle"><i class="fal fa-times"></i></button>
             <div class="mobile-logo">
-                <a href="index.html"><img src="assets/img/logo-dark.png" alt="halı yıkatma logo"
+                <a href="index.html"><img src="assets/img/logo-dark.png" alt="logo"
                         style="width:180px;"></a>
             </div>
             <div class="vs-mobile-menu">
@@ -120,7 +120,7 @@
                         <div class="header-links">
                             <ul>
                                 <li><i class="far fa-envelope"></i><a
-                                        href="mailto:info@haliyikatma.com">info@Anatolia Su Ürünleri.com</a></li>
+                                        href="mailto:info@haliyikatma.com">info@anatolia.com</a></li>
                                 <li class="d-lg-inline d-none"><i class="far fa-clock"></i>Pazartesi - Cumartesi 8:00 -
                                     21:00</li>
                             </ul>
@@ -258,7 +258,7 @@
                                 </span>
                                 <div class="contact-content">
                                     <h6 class="contact-title">E-mail :</h6>
-                                    <p class="contact-text">info@Anatolia Su Ürünleri.com</p>
+                                    <p class="contact-text">info@anatolia.com</p>
                                 </div>
                             </div>
                         </div>
@@ -378,7 +378,7 @@
                 <div class="row justify-content-xl-between justify-content-center align-items-center">
                     <div class="col-auto">
                         <p class="copyright-text"><i class="fal fa-copyright"></i> Copyright 2025 - <a
-                                href="index.html">Anatolia Su Ürünleri.com</a> Tüm hakları saklıdır.</p>
+                                href="index.html">anatolia.com</a> Tüm hakları saklıdır.</p>
                     </div>
                     <div class="col-auto">
                         <div class="copyright-img">
