--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="vs-menu-area text-center">
             <button class="vs-menu-toggle"><i class="fal fa-times"></i></button>
             <div class="mobile-logo">
-                <a href="index.html"><img src="assets/img/logo-dark.png" alt="halı yıkatma logo"
+                <a href="index.html"><img src="assets/img/logo-dark.png" alt="logo"
                         style="width:180px;"></a>
             </div>
             <div class="vs-mobile-menu">
@@ -117,7 +117,7 @@
                         <div class="header-links">
                             <ul>
                                 <li><i class="far fa-envelope"></i><a
-                                        href="mailto:info@haliyikatma.com">info@Anatolia Su Ürünleri.com</a></li>
+                                        href="mailto:info@haliyikatma.com">info@anatolia.com</a></li>
                                 <li class="d-lg-inline d-none"><i class="far fa-clock"></i>Pazartesi - Cumartesi 8:00 -
                                     21:00</li>
                             </ul>
@@ -211,7 +211,7 @@
                             <p class="vs-hero__text wow animate__fadeInUp" style="color:white;" data-wow-delay="0.80s">
                                 Kalitemizle Hepinizi Mutlu Ediyoruz.</p>
                             <div class="hero-btn wow animate__fadeInUp" data-wow-delay="0.90s">
-                                <a class="vs-btn2" href="tel:+905426209991">Bilgi Al<i
+                                <a class="vs-btn2" href="tel:+905304768777">Bilgi Al<i
                                         class="far fa-long-arrow-right"></i></a>
                             </div>
                         </div>
@@ -235,7 +235,7 @@
                     <div class="col-lg-3 col-md-6 service-style3">
                         <div class="service-content border-right">
                             <div class="icon-btn3"> <span class="icon"><img src="assets/img/icon/balikicon.svg"
-                                        alt="service-icon"></span></div>
+                                        alt="balik-icon"></span></div>
                             <h2 class="service-title"><a href="service.html">Doğal Yetiştiricilik</a></h2>
                             <p class="service-text">Doğal ortamda, etik koşullarda yetiştirilen balıklar.</p>
                             <span class="shape-mockup" style="right: 0; top: 0;"><img
@@ -291,10 +291,10 @@
                             <img src="assets/img/icon/balikicon.svg" alt="icon">
                         </div>
                         <div class="img1">
-                            <a href="hakkimizda.html"><img src="assets/img/about/calisanlar.png" alt="About Image"></a>
+                            <a href="hakkimizda.html"><img src="assets/img/about/calisanlar.png" alt="hakkımızda-image"></a>
                         </div>
                         <div class="img2">
-                            <a href="hakkimizda.html"><img src="assets/img/about/about-img-2-2.jpg" alt="About Image"></a>
+                            <a href="hakkimizda.html"><img src="assets/img/about/about-img-2-2.jpg" alt="hakkımızda-image"></a>
                         </div>
                         <span class="shape-mockup d-lg-block d-block h-100" style="right: 0; top: 0px;"><img
                                 src="assets/img/shapes/about-line-shape.png" alt="counter element"></span>
@@ -330,7 +330,7 @@
 
                             </div>
                             <div class="tab-img">
-                                <img src="assets/img/about/about-tab-2.jpg" alt="About Image">
+                                <img src="assets/img/about/about-tab-2.jpg" alt="hakkımızda-image">
                             </div>
                         </div>
                         <div class="contact-box">
@@ -341,7 +341,7 @@
                             </div>
                         </div>
                         <div class="about-inner mb-0 wow animate__fadeInUp" data-wow-delay="0.25s">
-                            <a class="vs-btn2" href="tel:+905456033448">Mobil İletişim <i
+                            <a class="vs-btn2" href="tel:+905304768777">Mobil İletişim <i
                                     class="far fa-long-arrow-right"></i></a>
                         </div>
                     </div>
@@ -443,7 +443,7 @@
                     <div class="service-style4">
                         <div class="service-img">
                             <a>
-                                <img src="assets/img/service/somon-alabalik.jpg" alt="halı yıkama" class="w-100">
+                                <img src="assets/img/service/somon-alabalik.jpg" alt="somonalabalik" class="w-100">
                             </a>
                             <div class="service-icon">
                                 <span class="shape-mockup" style="left: -14px; top: -10px;"><img
@@ -451,7 +451,7 @@
                                 <span class="shape-mockup" style="right: -14px; top: -10px;"><img
                                         src="assets/img/shapes/angle-right.png" alt="counter element"></span>
                                 <div class="icon-btn3"> <span class="icon"><img
-                                            src="assets/img/icon/balikicon.svg" alt="service-icon"></span></div>
+                                            src="assets/img/icon/balikicon.svg" alt="balik-icon"></span></div>
                             </div>
                         </div>
                         <div class="service-body">
@@ -468,7 +468,7 @@
                     <div class="service-style4">
                         <div class="service-img">
                             <a>
-                                <img src="assets/img/service/kalitestandart.jpg" alt="perde yıkama" class="w-100">
+                                <img src="assets/img/service/kalitestandart.jpg" alt="kalitestandart" class="w-100">
                             </a>
                             <div class="service-icon">
                                 <span class="shape-mockup" style="left: -14px; top: -10px;"><img
@@ -476,7 +476,7 @@
                                 <span class="shape-mockup" style="right: -14px; top: -10px;"><img
                                         src="assets/img/shapes/angle-right.png" alt="counter element"></span>
                                 <div class="icon-btn3"> <span class="icon"><img
-                                            src="assets/img/icon/balikicon.svg" alt="service-icon"></span></div>
+                                            src="assets/img/icon/balikicon.svg" alt="balik-icon"></span></div>
                             </div>
                         </div>
                         <div class="service-body">
@@ -493,7 +493,7 @@
                     <div class="service-style4">
                         <div class="service-img">
                             <a>
-                                <img src="assets/img/service/ihracat.jpg" alt="Yatak Yıkama" class="w-100">
+                                <img src="assets/img/service/ihracat.jpg" alt="ihracat" class="w-100">
                             </a>
                             <div class="service-icon">
                                 <span class="shape-mockup" style="left: -14px; top: -10px;"><img
@@ -501,7 +501,7 @@
                                 <span class="shape-mockup" style="right: -14px; top: -10px;"><img
                                         src="assets/img/shapes/angle-right.png" alt="counter element"></span>
                                 <div class="icon-btn3"> <span class="icon"><img
-                                            src="assets/img/icon/balikicon.svg" alt="service-icon"></span></div>
+                                            src="assets/img/icon/balikicon.svg" alt="balik-icon"></span></div>
                             </div>
                         </div>
                         <div class="service-body">
@@ -518,7 +518,7 @@
                     <div class="service-style4">
                         <div class="service-img">
                             <a>
-                                <img src="assets/img/service/dogal.jpg" alt="Yorgan Yıkama" class="w-100">
+                                <img src="assets/img/service/dogal.jpg" alt="dogal" class="w-100">
                             </a>
                             <div class="service-icon">
                                 <span class="shape-mockup" style="left: -14px; top: -10px;"><img
@@ -526,7 +526,7 @@
                                 <span class="shape-mockup" style="right: -14px; top: -10px;"><img
                                         src="assets/img/shapes/angle-right.png" alt="counter element"></span>
                                 <div class="icon-btn3"> <span class="icon"><img
-                                            src="assets/img/icon/balikicon.svg" alt="service-icon"></span></div>
+                                            src="assets/img/icon/balikicon.svg" alt="balik-icon"></span></div>
                             </div>
                         </div>
                         <div class="service-body">
@@ -543,7 +543,7 @@
                     <div class="service-style4">
                         <div class="service-img">
                             <a>
-                                <img src="assets/img/service/herbalik.jpg" alt="ev temizliği" class="w-100">
+                                <img src="assets/img/service/herbalik.jpg" alt="baliklar" class="w-100">
                             </a>
                             <div class="service-icon">
                                 <span class="shape-mockup" style="left: -14px; top: -10px;"><img
@@ -551,7 +551,7 @@
                                 <span class="shape-mockup" style="right: -14px; top: -10px;"><img
                                         src="assets/img/shapes/angle-right.png" alt="counter element"></span>
                                 <div class="icon-btn3"> <span class="icon"><img
-                                            src="assets/img/icon/balikicon.svg" alt="service-icon"></span></div>
+                                            src="assets/img/icon/balikicon.svg" alt="balik-icon"></span></div>
                             </div>
                         </div>
                         <div class="service-body">
@@ -568,7 +568,7 @@
                     <div class="service-style4">
                         <div class="service-img">
                             <a>
-                                <img src="assets/img/service/calisan.jpg" alt="koltuk yıkama" class="w-100">
+                                <img src="assets/img/service/calisan.jpg" alt="calisan class="w-100">
                             </a>
                             <div class="service-icon">
                                 <span class="shape-mockup" style="left: -14px; top: -10px;"><img
@@ -576,7 +576,7 @@
                                 <span class="shape-mockup" style="right: -14px; top: -10px;"><img
                                         src="assets/img/shapes/angle-right.png" alt="counter element"></span>
                                 <div class="icon-btn3"> <span class="icon"><img
-                                            src="assets/img/icon/balikicon.svg" alt="service-icon"></span></div>
+                                            src="assets/img/icon/balikicon.svg" alt="balik-icon"></span></div>
                             </div>
                         </div>
                         <div class="service-body">
@@ -593,7 +593,7 @@
                     <div class="service-style4">
                         <div class="service-img">
                             <a>
-                                <img src="assets/img/service/uretimguvence.jpg" alt="Halı Tamiri" class="w-100">
+                                <img src="assets/img/service/uretimguvence.jpg" alt="uretimguvence" class="w-100">
                             </a>
                             <div class="service-icon">
                                 <span class="shape-mockup" style="left: -14px; top: -10px;"><img
@@ -601,7 +601,7 @@
                                 <span class="shape-mockup" style="right: -14px; top: -10px;"><img
                                         src="assets/img/shapes/angle-right.png" alt="counter element"></span>
                                 <div class="icon-btn3"> <span class="icon"><img
-                                            src="assets/img/icon/balikicon.svg" alt="service-icon"></span></div>
+                                            src="assets/img/icon/balikicon.svg" alt="balik-icon"></span></div>
                             </div>
                         </div>
                         <div class="service-body">
@@ -627,7 +627,7 @@
                                 <span class="shape-mockup" style="right: -14px; top: -10px;"><img
                                         src="assets/img/shapes/angle-right.png" alt="counter element"></span>
                                 <div class="icon-btn3"> <span class="icon"><img
-                                            src="assets/img/icon/balikicon.svg" alt="service-icon"></span></div>
+                                            src="assets/img/icon/balikicon.svg" alt="balik-icon"></span></div>
                             </div>
                         </div>
                         <div class="service-body">
@@ -669,7 +669,7 @@
                     <div class="service-style4">
                         <div class="service-img">
                             <a>
-                                <img src="assets/img/service/kafes.png" alt="Halı Overlok" class="w-100">
+                                <img src="assets/img/service/kafes.png" alt="Kafesler" class="w-100">
                             </a>
                             <div class="service-icon">
                                 <span class="shape-mockup" style="left: -14px; top: -10px;"><img
@@ -677,7 +677,7 @@
                                 <span class="shape-mockup" style="right: -14px; top: -10px;"><img
                                         src="assets/img/shapes/angle-right.png" alt="counter element"></span>
                                 <div class="icon-btn3"> <span class="icon"><img
-                                            src="assets/img/icon/balikicon.svg" alt="service-icon"></span></div>
+                                            src="assets/img/icon/balikicon.svg" alt="balik-icon"></span></div>
                             </div>
                         </div>
                         <div class="service-body">
@@ -809,8 +809,7 @@
         <span class="shape-mockup d-xl-block d-none wow animate__fadeInLeft" style="right: 0px; top: 60px;"><img
                 src="assets/img/shapes/map-shape-2.png" alt="Book element"></span>
         <span class="shape-mockup z-index custom-sheap wow animate__fadeInRight" data-wow-delay="0.90s"
-            style="right: 0px; bottom: 80px;"><img src="assets/img/shapes/service-shape-man2.png"
-                alt="service element"></span>
+            style="right: 0px; bottom: 80px;"></span>
     </section>
     <!-- Book Area End  -->
     <!-- Counter Area -->
@@ -963,7 +962,7 @@
                 <div class="row justify-content-xl-between justify-content-center align-items-center">
                     <div class="col-auto">
                         <p class="copyright-text"><i class="fal fa-copyright"></i> Copyright 2025 - <a
-                                href="index.html">Anatolia Su Ürünleri.com</a> Tüm hakları saklıdır.</p>
+                                href="index.html">anatolia.com</a> Tüm hakları saklıdır.</p>
                     </div>
                     <div class="col-auto">
                         <div class="copyright-img">
